--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,13 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply scroll-smooth;
+  }
   * {
     @apply m-0 p-0 box-border font-Lexend;
   }
   body {
-    @apply bg-zinc-800;
+    @apply bg-[#FDF9EA];
   }
 }
